fixed whatsapp button position on mobile

--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ body{
 .header .logo {
 	float: left;
 	margin-top: 8px;
-	height: 100%;
+	/* height: 100%; */
 }
 /* .header .logo img {
 	height: 100%;
@@ -4308,6 +4308,11 @@ body{
 } */
 
 
+html{
+	overflow-x: hidden;
+	width: 100%;
+}
+
 /* WhatsApp Floating Button */
 .whatsapp-float {
     position: fixed;
@@ -4321,11 +4326,12 @@ body{
     text-align: center;
     font-size: 30px;
     box-shadow: 2px 2px 3px #999;
-    z-index: 100;
+    z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
+	transform: translate(-50%, -50%);
 }
 
 .whatsapp-float:hover {
@@ -4346,10 +4352,17 @@ body{
     .whatsapp-float {
         width: 50px;
         height: 50px;
-        bottom: 20px;
+        bottom: 100px;
         right: 20px;
         font-size: 25px;
     }
+}
+
+
+@media screen and (max-width: 768px) {
+    .footer .single-footer ul {
+		flex-direction: column;
+	}
 }
 
 
